kubernetes/main/apps/vpn/threadfin/app/policy.yaml
# ---
# apiVersion: cilium.io/v2
# kind: CiliumNetworkPolicy
# metadata:
#   name: threadfin-vpn
#   namespace: vpn
#   labels:
#     app.kubernetes.io/instance: threadfin
#     app.kubernetes.io/name: threadfin
# spec:
#   endpointSelector:
#     matchLabels:
#       app.kubernetes.io/instance: threadfin
#       app.kubernetes.io/name: threadfin
#   egress:
#     - toCIDR:
#         - 0.0.0.0/0
#       toPorts:
#         - ports:
#             - port: "51820"
#               protocol: UDP
#     - toEntities:
#         - cluster
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: threadfin-vpn
  namespace: vpn
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: threadfin
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gateway
    - toEntities:
        - cluster
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "34400"
              protocol: TCP
